Fixing issues in generation
Signed-off-by: Gnanakeethan <gnanakeethan@users.noreply.github.com>

--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -20,7 +20,7 @@ model:
 # Where should the resolver implementations go?
 resolver:
   layout: follow-schema
-  dir: resolvers
+  dir: graph/resolvers
   package: resolvers
 
 # Optional: turn on use `gqlgen:"fieldName"` tags in your models
