--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "postcss-load-config": "^3.1.1",
     "prettier": "~2.5.1",
     "prettier-plugin-svelte": "^2.6.0",
+    "prettier-plugin-tailwindcss": "^0.1.5",
     "rollup": "^2.66.1",
     "sass": "^1.49.0",
     "svelte": "^3.46.3",
