--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -1,7 +1,19 @@
 {
-	"useTabs": true,
-	"singleQuote": true,
-	"trailingComma": "none",
-	"printWidth": 100,
-	"plugins": ["prettier-plugin-svelte","prettier-plugin-tailwindcss"]
+  "useTabs": true,
+  "singleQuote": true,
+  "trailingComma": "none",
+  "printWidth": 100,
+  "overrides": [
+    {
+      "files": "*.svelte",
+      "options": {
+        "svelteBracketNewLine": false,
+        "svelteAllowShorthand": false,
+        "svelteSortOrder": "options-scripts-styles-markup",
+        "plugins": [
+          "prettier-plugin-svelte"
+        ]
+      }
+    }
+  ]
 }
