--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
-    "@iconify/json": "^2.0.29",
+    "@iconify/json": "^2.0.33",
     "@iconify/svelte": "^2.1.2",
     "@macfja/svelte-persistent-store": "^1.2.0",
     "@rollup/plugin-typescript": "^8.3.0",
@@ -21,46 +21,44 @@
     "@sveltejs/adapter-static": "^1.0.0-next.26",
     "@sveltejs/kit": "next",
     "@tailwindcss/forms": "^0.4.0",
-    "@tailwindcss/typography": "^0.5.0",
+    "@tailwindcss/typography": "^0.5.1",
     "@tsconfig/svelte": "^2.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.10.1",
-    "@typescript-eslint/parser": "^5.10.1",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "@typescript-eslint/parser": "^5.10.2",
     "@urql/svelte": "^1.3.3",
     "autoprefixer": "^10.4.2",
     "axios": "^0.24.0",
     "brotli": "^1.3.2",
     "cssnano": "^5.0.16",
     "daisyui": "^1.25.4",
-    "eslint": "^8.7.0",
+    "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^3.4.0",
     "fetch": "^1.1.0",
     "graphql": "^16.3.0",
     "gzipme": "^1.0.0",
     "miragejs": "^0.1.43",
-    "postcss": "^8.4.5",
+    "postcss": "^8.4.6",
     "postcss-load-config": "^3.1.1",
     "prettier": "~2.5.1",
     "prettier-plugin-svelte": "^2.6.0",
     "prettier-plugin-tailwindcss": "^0.1.5",
-    "rollup": "^2.66.1",
-    "sass": "^1.49.0",
-    "svelte": "^3.46.3",
-    "svelte-check": "^2.3.0",
+    "rollup": "^2.67.0",
+    "sass": "^1.49.7",
+    "svelte": "^3.46.4",
+    "svelte-check": "^2.4.2",
     "svelte-forms-lib": "^2.0.1",
+    "svelte-fsm": "^1.1.2",
+    "svelte-inline-svg": "^1.0.8",
     "svelte-local-storage-store": "^0.2.6",
     "svelte-preprocess": "^4.10.2",
-    "svelte-windicss-preprocess": "^4.2.5",
-    "tailwindcss": "^3.0.17",
+    "svelte-select": "^4.4.7",
+    "tailwindcss": "^3.0.18",
     "tslib": "^2.3.1",
     "typescript": "^4.5.5",
     "unplugin-icons": "^0.13.0",
+    "urql": "^2.1.3",
     "uuid": "^8.3.2",
     "yup": "^0.32.11"
-  },
-  "dependencies": {
-    "svelte-fsm": "^1.1.2",
-    "svelte-inline-svg": "^1.0.8",
-    "svelte-select": "^4.4.7"
   }
 }
