Formatting using prettier
Signed-off-by: Gnanakeethan <gnanakeethan@users.noreply.github.com>

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -23,8 +23,8 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "baseUrl": "src",
-    "allowJs": true,
-    "checkJs": true,
+    "allowJs": false,
+    "checkJs": false,
     "paths": {
       "$lib/*": [
         "src/lib/*"
