--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "brotli": "^1.3.2",
     "cssnano": "^5.0.16",
     "daisyui": "^1.25.4",
+    "deep-diff": "^1.0.2",
     "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^3.4.0",
@@ -47,7 +48,6 @@
     "sass": "^1.49.7",
     "svelte": "^3.46.4",
     "svelte-check": "^2.4.2",
-    "svelte-data-grid": "https://github.com/fuzzthink/svelte-data-grid/tarball/v1.0.3",
     "svelte-forms-lib": "^2.0.1",
     "svelte-fsm": "^1.1.2",
     "svelte-inline-svg": "^1.0.8",
