--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -5,6 +5,7 @@ node_modules
 /.svelte-kit
 /build
 /functions
+schema
 
 # Update from : https://github.com/github/gitignore/blob/master/Global/JetBrains.gitignore
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
