--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "version": "0.0.1",
   "scripts": {
+    "generate": "graphql-codegen",
     "analysis": "windicss-analysis",
     "dev": "svelte-kit dev",
     "build": "svelte-kit build",
@@ -13,6 +14,7 @@
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^2.5.0",
     "@iconify/json": "^2.0.33",
     "@iconify/svelte": "^2.1.2",
     "@macfja/svelte-persistent-store": "^1.2.0",
@@ -61,5 +63,9 @@
     "urql": "^2.1.3",
     "uuid": "^8.3.2",
     "yup": "^0.32.11"
+  },
+  "dependencies": {
+    "@graphql-codegen/typescript": "^2.4.3",
+    "@graphql-codegen/typescript-operations": "^2.2.4"
   }
 }
