--- a/frontend/codegen.yaml
+++ b/frontend/codegen.yaml
@@ -5,4 +5,4 @@ generates:
     plugins:
       - typescript
       - typescript-operations
-      - graphql-codegen-svelte-apollo
+      - typescript-urql
