--- a/frontend/package.json
+++ b/frontend/package.json
@@ -66,6 +66,8 @@
   },
   "dependencies": {
     "@graphql-codegen/typescript": "^2.4.3",
-    "@graphql-codegen/typescript-operations": "^2.2.4"
+    "@graphql-codegen/typescript-operations": "^2.2.4",
+    "@graphql-codegen/typescript-urql": "^3.5.1",
+    "graphql-codegen-svelte-apollo": "^1.1.0"
   }
 }
