--- a/frontend/package.json
+++ b/frontend/package.json
@@ -68,6 +68,7 @@
     "@graphql-codegen/typescript": "^2.4.3",
     "@graphql-codegen/typescript-operations": "^2.2.4",
     "@graphql-codegen/typescript-urql": "^3.5.1",
-    "graphql-codegen-svelte-apollo": "^1.1.0"
+    "graphql-codegen-svelte-apollo": "^1.1.0",
+    "graphql-tag": "^2.12.6"
   }
 }
