Update: creating a ui element flow for navigation
Signed-off-by: Gnanakeethan <gnanakeethan@users.noreply.github.com>

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -73,6 +73,7 @@
   },
   "dependencies": {
     "graphql-codegen-svelte-apollo": "^1.1.0",
-    "graphql-tag": "^2.12.6"
+    "graphql-tag": "^2.12.6",
+    "ksuid": "^3.0.0"
   }
 }
