Setting up svelte-formly
Signed-off-by: Gnanakeethan <gnanakeethan@users.noreply.github.com>

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -74,6 +74,7 @@
   "dependencies": {
     "graphql-codegen-svelte-apollo": "^1.1.0",
     "graphql-tag": "^2.12.6",
-    "ksuid": "^3.0.0"
+    "ksuid": "^3.0.0",
+    "svelte-formly": "^1.1.1"
   }
 }
