--- a/frontend/package.json
+++ b/frontend/package.json
@@ -76,6 +76,7 @@
     "graphql-codegen-svelte-apollo": "^1.1.0",
     "graphql-tag": "^2.12.6",
     "ksuid": "^3.0.0",
+    "lodash": "^4.17.21",
     "svelte-formly": "^1.1.1",
     "svelte-formula": "^0.11.0"
   }
