--- a/frontend/package.json
+++ b/frontend/package.json
@@ -78,6 +78,7 @@
     "ksuid": "^3.0.0",
     "lodash": "^4.17.21",
     "svelte-formly": "^1.1.1",
-    "svelte-formula": "^0.11.0"
+    "svelte-formula": "^0.11.0",
+    "svelte-multistep-form": "^0.0.6"
   }
 }
