--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "moduleResolution": "node",
+    //    "moduleResolution": "node",
     "module": "es2020",
     "lib": [
       "es2020",
