--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,35 +13,38 @@
     "format": "prettier --write --plugin-search-dir=. .",
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
+  "imports": {
+    "$lib/*": "./src/lib/*"
+  },
   "devDependencies": {
-    "@graphql-codegen/cli": "^2.5.0",
-    "@graphql-codegen/typed-document-node": "^2.2.3",
-    "@graphql-codegen/typescript": "^2.4.3",
-    "@graphql-codegen/typescript-operations": "^2.2.4",
-    "@graphql-codegen/typescript-urql": "^3.5.1",
+    "@graphql-codegen/cli": "^2.6.2",
+    "@graphql-codegen/typed-document-node": "^2.2.5",
+    "@graphql-codegen/typescript": "^2.4.5",
+    "@graphql-codegen/typescript-operations": "^2.3.2",
+    "@graphql-codegen/typescript-urql": "^3.5.3",
     "@graphql-codegen/urql-introspection": "^2.1.1",
-    "@graphql-codegen/urql-svelte-operations-store": "^1.1.10",
+    "@graphql-codegen/urql-svelte-operations-store": "^1.1.12",
     "@graphql-typed-document-node/core": "^3.1.1",
-    "@iconify/json": "^2.0.33",
+    "@iconify/json": "^2.1.2",
     "@iconify/svelte": "^2.1.2",
     "@macfja/svelte-persistent-store": "^1.2.0",
     "@rollup/plugin-typescript": "^8.3.0",
-    "@sveltejs/adapter-node": "^1.0.0-next.67",
-    "@sveltejs/adapter-static": "^1.0.0-next.26",
+    "@sveltejs/adapter-node": "^1.0.0-next.68",
+    "@sveltejs/adapter-static": "^1.0.0-next.28",
     "@sveltejs/kit": "next",
     "@tailwindcss/forms": "^0.4.0",
-    "@tailwindcss/typography": "^0.5.1",
+    "@tailwindcss/typography": "^0.5.2",
     "@tsconfig/svelte": "^2.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.10.2",
-    "@typescript-eslint/parser": "^5.10.2",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
     "@urql/svelte": "^1.3.3",
     "autoprefixer": "^10.4.2",
     "axios": "^0.24.0",
     "brotli": "^1.3.2",
-    "cssnano": "^5.0.16",
+    "cssnano": "^5.0.17",
     "daisyui": "^1.25.4",
     "deep-diff": "^1.0.2",
-    "eslint": "^8.8.0",
+    "eslint": "^8.9.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^3.4.0",
     "fetch": "^1.1.0",
@@ -49,24 +52,24 @@
     "gzipme": "^1.0.0",
     "miragejs": "^0.1.43",
     "postcss": "^8.4.6",
-    "postcss-load-config": "^3.1.1",
+    "postcss-load-config": "^3.1.3",
     "prettier": "~2.5.1",
     "prettier-plugin-svelte": "^2.6.0",
-    "prettier-plugin-tailwindcss": "^0.1.5",
-    "rollup": "^2.67.0",
-    "sass": "^1.49.7",
+    "prettier-plugin-tailwindcss": "^0.1.7",
+    "rollup": "^2.67.2",
+    "sass": "^1.49.8",
     "svelte": "^3.46.4",
-    "svelte-check": "^2.4.2",
+    "svelte-check": "^2.4.5",
     "svelte-forms-lib": "^2.0.1",
     "svelte-fsm": "^1.1.2",
-    "svelte-inline-svg": "^1.0.8",
+    "svelte-inline-svg": "^1.1.1",
     "svelte-local-storage-store": "^0.2.6",
-    "svelte-preprocess": "^4.10.2",
+    "svelte-preprocess": "^4.10.3",
     "svelte-select": "^4.4.7",
-    "tailwindcss": "^3.0.18",
+    "tailwindcss": "^3.0.23",
     "tslib": "^2.3.1",
     "typescript": "^4.5.5",
-    "unplugin-icons": "^0.13.0",
+    "unplugin-icons": "^0.13.1",
     "urql": "^2.1.3",
     "uuid": "^8.3.2",
     "yup": "^0.32.11"
