--- a/frontend/package.json
+++ b/frontend/package.json
@@ -82,6 +82,7 @@
     "lodash": "^4.17.21",
     "svelte-formly": "^1.1.1",
     "svelte-formula": "^0.11.0",
-    "svelte-multistep-form": "^0.0.6"
+    "svelte-multistep-form": "^0.0.6",
+    "svelte-watch-resize": "^1.0.3"
   }
 }
