Update: creating filters
Signed-off-by: Gnanakeethan <gnanakeethan@users.noreply.github.com>

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write --plugin-search-dir=. .",
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
+  "graphql": "codegen.yaml",
   "imports": {
     "$lib/*": "./src/lib/*"
   },
