--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -46,9 +46,7 @@ models:
   ID:
     model:
       - github.com/99designs/gqlgen/graphql.ID
-      - github.com/99designs/gqlgen/graphql.Int
-      - github.com/99designs/gqlgen/graphql.Int64
-      - github.com/99designs/gqlgen/graphql.Int32
+      - github.com/99designs/gqlgen/graphql.String
   Int:
     model:
       - github.com/99designs/gqlgen/graphql.Int
