--- a/frontend/codegen.yaml
+++ b/frontend/codegen.yaml
@@ -1,5 +1,6 @@
 schema: http://localhost:8080/v1/graphql # Or schema: ./src/schema.graphql
-documents: './../graph/operations/*.graphql'
+documents:
+  - './../graph/operations/*.graphql'
 generates:
   ./src/lib/graphql/generated.ts:
     plugins:
