--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -43,6 +43,9 @@ autobind:
 # modelgen, the others will be allowed when binding to fields. Configure them to
 # your liking
 models:
+  ExaminationResults:
+    model:
+      - models.ExaminationResults
   ID:
     model:
       - github.com/99designs/gqlgen/graphql.ID
