--- a/frontend/package.json
+++ b/frontend/package.json
@@ -76,6 +76,7 @@
     "yup": "^0.32.11"
   },
   "dependencies": {
+    "@thi.ng/ksuid": "^2.1.4",
     "clsx": "^1.1.1",
     "graphql-codegen-svelte-apollo": "^1.1.0",
     "graphql-tag": "^2.12.6",
