--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -43,6 +43,11 @@ autobind:
 # modelgen, the others will be allowed when binding to fields. Configure them to
 # your liking
 models:
+  User:
+    model: models.User
+    fields:
+      Roles:
+        resolver: true
   ExaminationResults:
     model:
       - models.ResultsModel
