--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,47 +19,48 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.6.2",
-    "@graphql-codegen/typed-document-node": "^2.2.7",
-    "@graphql-codegen/typescript": "^2.4.7",
-    "@graphql-codegen/typescript-operations": "^2.3.4",
-    "@graphql-codegen/typescript-urql": "^3.5.5",
+    "@graphql-codegen/typed-document-node": "^2.2.8",
+    "@graphql-codegen/typescript": "^2.4.8",
+    "@graphql-codegen/typescript-operations": "^2.3.5",
+    "@graphql-codegen/typescript-urql": "^3.5.7",
     "@graphql-codegen/urql-introspection": "^2.1.1",
-    "@graphql-codegen/urql-svelte-operations-store": "^1.1.14",
+    "@graphql-codegen/urql-svelte-operations-store": "^1.1.15",
     "@graphql-typed-document-node/core": "^3.1.1",
-    "@iconify/json": "^2.1.16",
-    "@iconify/svelte": "^2.1.2",
+    "@iconify/json": "^2.1.23",
+    "@iconify/svelte": "^2.2.1",
     "@macfja/svelte-persistent-store": "^1.3.0",
     "@rollup/plugin-typescript": "^8.3.1",
-    "@sveltejs/adapter-node": "^1.0.0-next.72",
+    "@sveltejs/adapter-node": "^1.0.0-next.73",
     "@sveltejs/adapter-static": "^1.0.0-next.29",
     "@sveltejs/kit": "next",
     "@tailwindcss/forms": "^0.4.1",
     "@tailwindcss/typography": "^0.5.2",
     "@tsconfig/svelte": "^2.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.15.0",
-    "@typescript-eslint/parser": "^5.15.0",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
     "@urql/svelte": "^1.3.3",
     "autoprefixer": "^10.4.4",
     "axios": "^0.24.0",
     "brotli": "^1.3.2",
-    "cssnano": "^5.1.4",
+    "cssnano": "^5.1.7",
     "daisyui": "^1.25.4",
     "deep-diff": "^1.0.2",
-    "eslint": "^8.11.0",
+    "eslint": "^8.12.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^3.4.1",
     "fetch": "^1.1.0",
+    "git-repo-info": "^2.1.1",
     "graphql": "^16.3.0",
     "gzipme": "^1.0.0",
     "miragejs": "^0.1.43",
     "postcss": "^8.4.12",
-    "postcss-load-config": "^3.1.3",
+    "postcss-load-config": "^3.1.4",
     "prettier": "~2.5.1",
     "prettier-plugin-svelte": "^2.6.0",
     "prettier-plugin-tailwindcss": "^0.1.8",
     "rollup": "^2.70.1",
-    "sass": "^1.49.9",
-    "svelte": "^3.46.4",
+    "sass": "^1.49.11",
+    "svelte": "^3.46.6",
     "svelte-check": "^2.4.6",
     "svelte-forms-lib": "^2.0.1",
     "svelte-fsm": "^1.1.2",
@@ -69,7 +70,7 @@
     "svelte-select": "^4.4.7",
     "tailwindcss": "^3.0.23",
     "tslib": "^2.3.1",
-    "typescript": "^4.6.2",
+    "typescript": "^4.6.3",
     "unplugin-icons": "^0.13.4",
     "urql": "^2.2.0",
     "uuid": "^8.3.2",
@@ -82,7 +83,7 @@
     "graphql-tag": "^2.12.6",
     "ksuid": "^3.0.0",
     "lodash": "^4.17.21",
-    "svelte-formly": "^1.1.1",
+    "svelte-formly": "^1.1.2",
     "svelte-formula": "^0.11.0",
     "svelte-multistep-form": "^0.0.6",
     "svelte-watch-resize": "^1.0.3"
