--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -26,6 +26,9 @@
     "allowJs": false,
     "checkJs": false,
     "paths": {
+      "$lib": [
+        "src/lib"
+      ],
       "$lib/*": [
         "src/lib/*"
       ]
