--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "$lib/*": "./src/lib/*"
   },
   "devDependencies": {
+    "@carbon/charts": "^0.57.0",
     "@graphql-codegen/cli": "^2.6.2",
     "@graphql-codegen/typed-document-node": "^2.2.8",
     "@graphql-codegen/typescript": "^2.4.8",
@@ -26,59 +27,62 @@
     "@graphql-codegen/urql-introspection": "^2.1.1",
     "@graphql-codegen/urql-svelte-operations-store": "^1.1.15",
     "@graphql-typed-document-node/core": "^3.1.1",
-    "@iconify/json": "^2.1.23",
+    "@iconify/json": "^2.1.34",
     "@iconify/svelte": "^2.2.1",
     "@macfja/svelte-persistent-store": "^1.3.0",
-    "@rollup/plugin-typescript": "^8.3.1",
+    "@rollup/plugin-typescript": "^8.3.2",
     "@sveltejs/adapter-node": "^1.0.0-next.73",
     "@sveltejs/adapter-static": "^1.0.0-next.29",
     "@sveltejs/kit": "next",
     "@tailwindcss/forms": "^0.4.1",
     "@tailwindcss/typography": "^0.5.2",
     "@tsconfig/svelte": "^2.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.17.0",
-    "@typescript-eslint/parser": "^5.17.0",
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@typescript-eslint/parser": "^5.21.0",
     "@urql/svelte": "^1.3.3",
-    "autoprefixer": "^10.4.4",
+    "autoprefixer": "^10.4.5",
     "axios": "^0.24.0",
     "brotli": "^1.3.2",
+    "carbon-components": "^10.56.0",
     "cssnano": "^5.1.7",
     "daisyui": "^1.25.4",
     "deep-diff": "^1.0.2",
-    "eslint": "^8.12.0",
+    "eslint": "^8.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^3.4.1",
     "fetch": "^1.1.0",
     "git-repo-info": "^2.1.1",
-    "graphql": "^16.3.0",
+    "graphql": "^16.4.0",
     "gzipme": "^1.0.0",
     "miragejs": "^0.1.43",
-    "postcss": "^8.4.12",
+    "postcss": "^8.4.13",
     "postcss-load-config": "^3.1.4",
     "prettier": "~2.5.1",
-    "prettier-plugin-svelte": "^2.6.0",
-    "prettier-plugin-tailwindcss": "^0.1.8",
-    "rollup": "^2.70.1",
-    "sass": "^1.49.11",
-    "svelte": "^3.46.6",
-    "svelte-check": "^2.4.6",
+    "prettier-plugin-svelte": "^2.7.0",
+    "prettier-plugin-tailwindcss": "^0.1.10",
+    "rollup": "^2.71.0",
+    "sass": "^1.51.0",
+    "svelte": "^3.47.0",
+    "svelte-check": "^2.7.0",
     "svelte-forms-lib": "^2.0.1",
     "svelte-fsm": "^1.1.2",
-    "svelte-inline-svg": "^1.1.2",
+    "svelte-inline-svg": "^1.1.3",
     "svelte-local-storage-store": "^0.2.6",
-    "svelte-preprocess": "^4.10.4",
+    "svelte-preprocess": "^4.10.6",
     "svelte-select": "^4.4.7",
-    "tailwindcss": "^3.0.23",
-    "tslib": "^2.3.1",
-    "typescript": "^4.6.3",
+    "tailwindcss": "^3.0.24",
+    "tslib": "^2.4.0",
+    "typescript": "^4.6.4",
     "unplugin-icons": "^0.13.4",
     "urql": "^2.2.0",
     "uuid": "^8.3.2",
     "yup": "^0.32.11"
   },
   "dependencies": {
-    "@thi.ng/ksuid": "^2.1.5",
+    "@carbon/charts-svelte": "^0.57.0",
+    "@thi.ng/ksuid": "^2.1.6",
     "clsx": "^1.1.1",
+    "d3": "^7.4.4",
     "graphql-codegen-svelte-apollo": "^1.1.0",
     "graphql-tag": "^2.12.6",
     "ksuid": "^3.0.0",
