--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,95 +1,104 @@
 {
-  "name": "svelte-app",
-  "type": "module",
-  "license": "MIT",
-  "version": "0.0.1",
-  "scripts": {
-    "generate": "graphql-codegen",
-    "analysis": "windicss-analysis",
-    "dev": "svelte-kit dev",
-    "build": "svelte-kit build",
-    "preview": "svelte-kit preview",
-    "lint": "prettier --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-    "format": "prettier --write --plugin-search-dir=. .",
-    "check": "svelte-check --tsconfig ./tsconfig.json"
-  },
-  "graphql": "codegen.yaml",
-  "imports": {
-    "$lib/*": "./src/lib/*"
-  },
-  "devDependencies": {
-    "@carbon/charts": "^0.57.0",
-    "@graphql-codegen/cli": "^2.6.2",
-    "@graphql-codegen/typed-document-node": "^2.2.8",
-    "@graphql-codegen/typescript": "^2.4.8",
-    "@graphql-codegen/typescript-operations": "^2.3.5",
-    "@graphql-codegen/typescript-urql": "^3.5.7",
-    "@graphql-codegen/urql-introspection": "^2.1.1",
-    "@graphql-codegen/urql-svelte-operations-store": "^1.1.15",
-    "@graphql-typed-document-node/core": "^3.1.1",
-    "@iconify/json": "^2.1.34",
-    "@iconify/svelte": "^2.2.1",
-    "@macfja/svelte-persistent-store": "^1.3.0",
-    "@rollup/plugin-typescript": "^8.3.2",
-    "@sveltejs/adapter-node": "^1.0.0-next.73",
-    "@sveltejs/adapter-static": "^1.0.0-next.29",
-    "@sveltejs/kit": "next",
-    "@tailwindcss/forms": "^0.4.1",
-    "@tailwindcss/typography": "^0.5.2",
-    "@tsconfig/svelte": "^2.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.21.0",
-    "@typescript-eslint/parser": "^5.21.0",
-    "@urql/svelte": "^1.3.3",
-    "autoprefixer": "^10.4.5",
-    "axios": "^0.24.0",
-    "brotli": "^1.3.2",
-    "carbon-components": "^10.56.0",
-    "cssnano": "^5.1.7",
-    "daisyui": "^1.25.4",
-    "deep-diff": "^1.0.2",
-    "eslint": "^8.14.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-svelte3": "^3.4.1",
-    "fetch": "^1.1.0",
-    "git-repo-info": "^2.1.1",
-    "graphql": "^16.4.0",
-    "gzipme": "^1.0.0",
-    "miragejs": "^0.1.43",
-    "postcss": "^8.4.13",
-    "postcss-load-config": "^3.1.4",
-    "prettier": "~2.5.1",
-    "prettier-plugin-svelte": "^2.7.0",
-    "prettier-plugin-tailwindcss": "^0.1.10",
-    "rollup": "^2.71.0",
-    "sass": "^1.51.0",
-    "svelte": "^3.47.0",
-    "svelte-check": "^2.7.0",
-    "svelte-forms-lib": "^2.0.1",
-    "svelte-fsm": "^1.1.2",
-    "svelte-inline-svg": "^1.1.3",
-    "svelte-local-storage-store": "^0.2.6",
-    "svelte-preprocess": "^4.10.6",
-    "svelte-select": "^4.4.7",
-    "tailwindcss": "^3.0.24",
-    "tslib": "^2.4.0",
-    "typescript": "^4.6.4",
-    "unplugin-icons": "^0.13.4",
-    "urql": "^2.2.0",
-    "uuid": "^8.3.2",
-    "yup": "^0.32.11"
-  },
-  "dependencies": {
-    "@carbon/charts-svelte": "^0.57.0",
-    "@thi.ng/ksuid": "^2.1.6",
-    "clsx": "^1.1.1",
-    "d3": "^7.4.4",
-    "graphql-codegen-svelte-apollo": "^1.1.0",
-    "graphql-tag": "^2.12.6",
-    "ksuid": "^3.0.0",
-    "lodash": "^4.17.21",
-    "svelte-formly": "^1.1.2",
-    "svelte-formula": "^0.11.0",
-    "svelte-multistep-form": "^0.0.6",
-    "svelte-watch-resize": "^1.0.3"
-  }
+    "name": "svelte-app",
+    "type": "module",
+    "license": "MIT",
+    "version": "0.0.1",
+    "scripts": {
+        "generate": "houdini generate",
+        "analysis": "windicss-analysis",
+        "dev": "vite dev",
+        "build": "vite build",
+        "package": "svelte-kit package",
+        "preview": "vite preview",
+        "test": "playwright test",
+        "check": "svelte-check --tsconfig ./tsconfig.json",
+        "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
+        "lint": "prettier --check --plugin-search-dir=. . && eslint .",
+        "format": "prettier --write --plugin-search-dir=. ."
+    },
+    "graphql": "codegen.yaml",
+    "imports": {
+        "$lib/*": "./src/lib/*"
+    },
+    "devDependencies": {
+        "@carbon/charts": "^0.57.0",
+        "@graphql-codegen/cli": "^2.6.2",
+        "@graphql-codegen/typed-document-node": "^2.2.8",
+        "@graphql-codegen/typescript": "^2.4.8",
+        "@graphql-codegen/typescript-operations": "^2.3.5",
+        "@graphql-codegen/typescript-urql": "^3.5.7",
+        "@graphql-codegen/urql-introspection": "^2.1.1",
+        "@graphql-codegen/urql-svelte-operations-store": "^1.1.15",
+        "@graphql-typed-document-node/core": "^3.1.1",
+        "@iconify/json": "^2.1.34",
+        "@iconify/svelte": "^2.2.1",
+        "@macfja/svelte-persistent-store": "^1.3.0",
+        "@playwright/test": "^1.22.2",
+        "@rollup/plugin-typescript": "^8.3.2",
+        "@sveltejs/adapter-auto": "next",
+        "@sveltejs/adapter-node": "^1.0.0-next.73",
+        "@sveltejs/adapter-static": "^1.0.0-next.29",
+        "@sveltejs/kit": "next",
+        "@tailwindcss/forms": "^0.4.1",
+        "@tailwindcss/typography": "^0.5.2",
+        "@tsconfig/svelte": "^2.0.1",
+        "@types/cookie": "^0.5.1",
+        "@typescript-eslint/eslint-plugin": "^5.27.0",
+        "@typescript-eslint/parser": "^5.27.0",
+        "@urql/svelte": "^1.3.3",
+        "autoprefixer": "^10.4.5",
+        "axios": "^0.24.0",
+        "brotli": "^1.3.2",
+        "carbon-components": "^10.56.0",
+        "cssnano": "^5.1.7",
+        "daisyui": "^1.25.4",
+        "deep-diff": "^1.0.2",
+        "eslint": "^8.16.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-svelte3": "^4.0.0",
+        "fetch": "^1.1.0",
+        "git-repo-info": "^2.1.1",
+        "graphql": "^16.4.0",
+        "gzipme": "^1.0.0",
+        "houdini": "^0.15.8",
+        "miragejs": "^0.1.43",
+        "postcss": "^8.4.13",
+        "postcss-load-config": "^3.1.4",
+        "prettier": "^2.6.2",
+        "prettier-plugin-svelte": "^2.7.0",
+        "prettier-plugin-tailwindcss": "^0.1.10",
+        "rollup": "^2.71.0",
+        "sass": "^1.51.0",
+        "svelte": "^3.47.0",
+        "svelte-check": "^2.7.1",
+        "svelte-forms-lib": "^2.0.1",
+        "svelte-fsm": "^1.1.2",
+        "svelte-inline-svg": "^1.1.3",
+        "svelte-local-storage-store": "^0.2.6",
+        "svelte-preprocess": "^4.10.6",
+        "svelte-select": "^4.4.7",
+        "tailwindcss": "^3.0.24",
+        "tslib": "^2.4.0",
+        "typescript": "^4.7.4",
+        "unplugin-icons": "^0.14.8",
+        "urql": "^2.2.0",
+        "uuid": "^8.3.2",
+        "vite": "^3.0.0",
+        "yup": "^0.32.11",
+        "@kitql/vite-plugin-watch-and-run": "^0.4.2"
+    },
+    "dependencies": {
+        "@carbon/charts-svelte": "^0.57.0",
+        "@thi.ng/ksuid": "^2.1.6",
+        "clsx": "^1.1.1",
+        "d3": "^7.4.4",
+        "graphql-codegen-svelte-apollo": "^1.1.0",
+        "graphql-tag": "^2.12.6",
+        "ksuid": "^3.0.0",
+        "lodash": "^4.17.21",
+        "svelte-formly": "^1.1.2",
+        "svelte-formula": "^0.11.0",
+        "svelte-multistep-form": "^0.0.6",
+        "svelte-watch-resize": "^1.0.3"
+    }
 }
