--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,7 +33,7 @@
         "@iconify/json": "^2.1.34",
         "@iconify/svelte": "^2.2.1",
         "@kitql/vite-plugin-watch-and-run": "^0.4.2",
-        "@macfja/svelte-persistent-store": "~1.2.0",
+        "@macfja/svelte-persistent-store": "^2.1.0",
         "@playwright/test": "^1.22.2",
         "@rollup/plugin-typescript": "^8.3.2",
         "@sveltejs/adapter-auto": "next",
