--- a/v2-frontend/package.json
+++ b/v2-frontend/package.json
@@ -16,11 +16,17 @@
     "devDependencies": {
         "@carbon/charts-svelte": "^1.6.0",
         "@graphql-codegen/cli": "2.13.0",
+        "@graphql-codegen/typescript": "2.7.3",
+        "@graphql-codegen/typescript-document-nodes": "2.3.3",
+        "@graphql-codegen/urql-svelte-operations-store": "^1.3.0",
+        "@graphql-typed-document-node/core": "^3.1.1",
+        "@kitql/all-in": "^0.7.10",
         "@playwright/test": "^1.25.0",
         "@sveltejs/adapter-auto": "next",
         "@sveltejs/kit": "next",
         "@typescript-eslint/eslint-plugin": "^5.27.0",
         "@typescript-eslint/parser": "^5.27.0",
+        "@urql/svelte": "^3.0.1",
         "eslint": "^8.16.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-svelte3": "^4.0.0",
@@ -33,9 +39,7 @@
         "svelte-preprocess": "^4.10.6",
         "tslib": "^2.3.1",
         "typescript": "^4.7.4",
-        "vite": "^3.1.0",
-        "@graphql-codegen/typescript-document-nodes": "2.3.3",
-        "@graphql-codegen/typescript": "2.7.3"
+        "vite": "^3.1.0"
     },
     "type": "module"
 }
