--- a/v2-frontend/tsconfig.json
+++ b/v2-frontend/tsconfig.json
@@ -1,6 +1,7 @@
 {
 	"extends": "./.svelte-kit/tsconfig.json",
 	"compilerOptions": {
+		"rootDirs": [".","./.svelte-kit/types","./$houdini/types"],
 		"allowJs": true,
 		"checkJs": true,
 		"esModuleInterop": true,
