--- a/v2-frontend/package.json
+++ b/v2-frontend/package.json
@@ -1,45 +1,35 @@
 {
-    "name": "v2-frontend",
-    "version": "0.0.1",
-    "private": true,
-    "scripts": {
-        "dev": "vite dev",
-        "build": "vite build",
-        "preview": "vite preview",
-        "test": "playwright test",
-        "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-        "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-        "lint": "prettier --plugin-search-dir . --check . && eslint .",
-        "format": "prettier --plugin-search-dir . --write .",
-        "codegen": "graphql-codegen --config codegen.yml"
-    },
-    "devDependencies": {
-        "@carbon/charts-svelte": "^1.6.0",
-        "@graphql-codegen/cli": "2.13.0",
-        "@graphql-codegen/typescript": "2.7.3",
-        "@graphql-codegen/typescript-document-nodes": "2.3.3",
-        "@graphql-codegen/urql-svelte-operations-store": "^1.3.0",
-        "@graphql-typed-document-node/core": "^3.1.1",
-        "@kitql/all-in": "^0.7.10",
-        "@playwright/test": "^1.25.0",
-        "@sveltejs/adapter-auto": "next",
-        "@sveltejs/kit": "next",
-        "@typescript-eslint/eslint-plugin": "^5.27.0",
-        "@typescript-eslint/parser": "^5.27.0",
-        "@urql/svelte": "^3.0.1",
-        "eslint": "^8.16.0",
-        "eslint-config-prettier": "^8.3.0",
-        "eslint-plugin-svelte3": "^4.0.0",
-        "graphql": "^15.8.0",
-        "houdini": "^0.16.6",
-        "prettier": "^2.6.2",
-        "prettier-plugin-svelte": "^2.7.0",
-        "svelte": "^3.44.0",
-        "svelte-check": "^2.7.1",
-        "svelte-preprocess": "^4.10.6",
-        "tslib": "^2.3.1",
-        "typescript": "^4.7.4",
-        "vite": "^3.1.0"
-    },
-    "type": "module"
+  "name": "v2-frontend",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "playwright test",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "lint": "prettier --plugin-search-dir . --check . && eslint .",
+    "format": "prettier --plugin-search-dir . --write ."
+  },
+  "devDependencies": {
+    "@playwright/test": "1.25.0",
+    "@sveltejs/adapter-auto": "next",
+    "@sveltejs/adapter-static": "next",
+    "@sveltejs/kit": "next",
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "@typescript-eslint/parser": "^5.27.0",
+    "eslint": "^8.16.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-svelte3": "^4.0.0",
+    "prettier": "^2.6.2",
+    "prettier-plugin-svelte": "^2.7.0",
+    "svelte": "^3.44.0",
+    "svelte-check": "^2.7.1",
+    "svelte-preprocess": "^4.10.6",
+    "tslib": "^2.3.1",
+    "typescript": "^4.7.4",
+    "vite": "^3.1.0"
+  },
+  "type": "module"
 }
