--- a/v2-frontend/package.json
+++ b/v2-frontend/package.json
@@ -13,7 +13,17 @@
     "format": "prettier --plugin-search-dir . --write ."
   },
   "devDependencies": {
+    "@heroicons/vue": "^2.0.13",
+    "@graphql-codegen/cli": "^2.6.2",
+    "@graphql-codegen/typed-document-node": "^2.2.8",
+    "@graphql-codegen/typescript": "^2.4.8",
+    "@graphql-codegen/typescript-operations": "^2.3.5",
+    "@graphql-codegen/typescript-urql": "^3.5.7",
+    "@graphql-codegen/urql-introspection": "^2.1.1",
+    "@graphql-codegen/urql-svelte-operations-store": "^1.1.15",
+    "@graphql-typed-document-node/core": "^3.1.1",
     "@playwright/test": "1.25.0",
+    "@rgossiaux/svelte-headlessui": "^1.0.2",
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/adapter-node": "next",
     "@sveltejs/adapter-static": "next",
@@ -24,6 +34,9 @@
     "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^4.0.0",
+    "graphql": "^15.8.0",
+    "houdini": "^0.17.13",
+    "houdini-svelte": "^0.17.13",
     "postcss": "^8.4.19",
     "prettier": "^2.6.2",
     "prettier-plugin-svelte": "^2.7.0",
